# SmartIrrigatorFirmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.old
libs/mqtt_tcp/: CMakeLists.txt  mqtt_tcp.c
libs/mqtt_tcp/include/: mqtt_tcp.h
libs/wifi_prov_ble/: CMakeLists.txt  wifi_prov_ble.c
libs/wifi_prov_ble/include/: wifi_prov_ble.h
main/: CMakeLists.txt  app_main.c
